--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python-dotenv = "^1.0.1"
 pydantic = "^2.9.2"
 black = "^24.10.0"
 mypy = "^1.13.0"
+numpy = "^2.1.3"
+scipy = "^1.14.1"
+pytest = "^8.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
